SLING-12218 - Add test